service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: mock
    app.kubernetes.io/component: mock
  name: mock
  namespace: mymock
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    deployment: mock
  sessionAffinity: None
  type: ClusterIP
