httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mock
  namespace: mymock
spec:
  parentRefs:
  - name: default-gateway
    namespace: openshift-ingress
  hostnames: ["mock.gw.mydomain.com"]
  rules:
  - backendRefs:
    - name: mock
      port: 5000
